# sphinx-html-i18n-builder

./: README.md  pyproject.toml
src/sphinx_html_i18n_builder/: __init__.py  html_i18n_builder.py
src/sphinx_i18n_html_builder/: __init__.py  builder.py
