[tool.poetry]
name = "sphinx-i18n-html-builder"
version = "0.1.0"
description = ""
authors = ["Joao Vitor Carli Pereira <jvitor.carli@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
